--- a/Algorithm/Notes.tex
+++ b/Algorithm/Notes.tex
@@ -133,6 +133,8 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 	\tableofcontents
 	\newpage
 
+	\chapter{基础知识}
+	算法书的\href{https://ita.skanev.com/08/03/02.html}{答案}
 	\chapter{以比较为基础的排序算法}
 	先引入几个评判标准的概念：
 	\begin{enumerate}
