--- a/Algorithm/Notes.tex
+++ b/Algorithm/Notes.tex
@@ -134,7 +134,12 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 	\newpage
 
 	\chapter{基础知识}
-	算法书的\href{https://ita.skanev.com/08/03/02.html}{答案}
+	算法书的：
+	\begin{enumerate}
+		\item \href{https://ita.skanev.com/08/03/02.html}{答案1}
+		\item \href{https://sites.math.rutgers.edu/~ajl213/CLRS/CLRS.html}{答案2}
+		\item \href{https://www.cnblogs.com/alantu2018/category/1163289.html}{cnblogs的一些文章合集}
+	\end{enumerate}
 	\chapter{以比较为基础的排序算法}
 	先引入几个评判标准的概念：
 	\begin{enumerate}
