--- a/Compiler/Notes.tex
+++ b/Compiler/Notes.tex
@@ -132,6 +132,7 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 	\tableofcontents
 	\newpage
 
+	\chapter{词法分析}
 	\chapter{语法分析}
 	\textit{输入：词法分析获得的记号序列；输出：程序的语法树}。需要一种可以描述合法记号序列的语言、一种可以区分合法和非法的记号序列的方法。正则表达式不能用于描述配对或嵌套的结构，这是因为有限自动机不能记录重复访问同一状态的次数。\par
 	\section{上下文无关文法}
@@ -435,6 +436,45 @@ void type()
 		\end{table}
 		\subsection{注释分析树和属性依赖图}
 		根据语法分析，构建出来语法分析树，然后在每一个节点根据其属性值进行计算。当这些属性都是综合属性时，计算可以自底向上地完成。\par
-		如果分析树上的一个节点的属性b依赖于某个节点的属性c，那么b的语义规则的计算必须在c之后。这种依赖关系可以用一种有向图来描述。
-
+		如果分析树上的一个节点的属性b依赖于某个节点的属性c，那么b的语义规则的计算必须在c之后。这种依赖关系可以用一种称为\textbf{依赖图}的有向图来描述。
+		\paragraph{虚拟属性}
+		在构造分析树的依赖图之前，先为由过程调用组成的语义规则引入虚拟综合属性$b$，使得每一条规则都能写成$b=f(c_1,c_2,\cdots,c_k)$的形式。在语义分析时，每一个产生式都有一个综合属性（至少在向上返回的时候会用到的）。在后续推理过程中，逐渐（按需）加入继承属性。\par
+		属性依赖图的组成是：分析树上的每个结点的每一个属性，都在依赖图上构造一个结点，如果属性b依赖于属性c，那么从c到b连一条有向边。
+		\begin{enumerate}
+			\item 属性值为点(vertex)：分析树中每个标号为X的结点的每个属性a都对应着依赖图中的一个结点
+			\item 属性依赖关系为边(edge)：如果属性X.a的值依赖于属性Y.b的值，则依赖图中有一条从Y.b的结点指向X.a的结点的有向边
+		\end{enumerate}
+		\paragraph{属性计算次序}
+		由语法制导定义规范的翻译可以准确地按照以下步骤（分析树方法）完成：
+		\begin{enumerate}
+			\item 根据基础文法构造输入的分析树
+			\item 构造属性依赖图
+			\item 对依赖图进行拓扑排序，得到语义规则对计算次序
+			\item 按这个次序计算属性得到输入串的翻译
+		\end{enumerate}
+	\section{S属性定义的自下而上计算}
+	仅仅使用综合属性的语法制导定义称为S属性的SDD，或S-属性定义、S-SDD。
+		\subsection{语法树}
+		语法树是分析树的浓缩表示。在语法树中，算符（非终结符）和关键字（终结符）不是作为叶结点，而是作为分支结点。语法树上的内部结点都代表运算，其子节点都是他的运算对象。如同在分析树中那样，在语法树中也可以把属性附加到结点。\par
+		语法树的结点可以用有若干指针域的记录来实现。对于算符结点，一个域放运算符，作为结点对象的标记，其余两个域存放只想运算对象的指针。对于基本运算对象结点，一个放\textbf{运算对象类型}，一个放他的值。在真正用于翻译时，语法树的结点可能还有其他域来保存其他属性值，或者属性值的指针（比如说，对于产生式$S\to\mathbf{if}\ B\ \mathbf{then}\ S_1\ \mathbf{else}\ S_2$，运算符\textbf{if-then-else}就有4个域（自己和三个运算对象）
+		\subsection{S属性的自下而上计算}
+		S属性定义的翻译器可以借助LR分析器的生成器来实现，LR可以把文法符号的综合属性放入栈内。\par
+		扩展LR的语法分析栈：
+		\begin{enumerate}
+			\item 在分析栈中使用一个附加的域来存放综合属性值。若支持多个属性，那么可以在栈中存放指针
+			\item 每一个栈元素包含状态、文法符号、综合属性三个域。也可以将分析栈看成三个平行的栈，分别是状态栈、文法符号栈、综合属性栈，分开看的理由是，入栈出栈并不完全同步（即有些时候会有某一项不变的情况）
+			\item 语义动作将修改为对栈中文法符号属性的计算
+		\end{enumerate}\par
+		栈操作代码：分为对照的两部分，产生式和代码段。和之前的代码段（对综合属性的赋值及运算）不同，这里由于将正在被分析的结点（们）的属性都入栈了（还维护了一个top指针），现在将这些属性用他们在栈中的位置来表达。注意在这个自底向上的分析中，每一行栈的排布是：产生式“右值”从右向左依次从栈顶向下排，在执行这一步的归约之后pop出去所有的右值，并将左值入栈。\par
+		总的来说，采用自底向上分析，例如LR分析，首先给出 S-属性定义，然后，把S-属性定义变成可执行的代码段，放到产生式尾部，这就构成了翻译程序。（注：看一下紫书P118-119的表4.5，前三栏分别为状态栈、文法符号栈、综合属性栈）。
+	\section{L属性定义的自上而下计算}
+	显然，S属性定义属于L属性定义。
+		\subsection{翻译方案}
+		语法制导的翻译方案和语法制导定义不同之处是他的语义动作（在此不叫语义规则）放在花括号内，并且可以插入到产生式右部的\textbf{任何地方}，即这种表示法动作与分析交错。若$A\to\alpha\{\cdots\}\beta$，那么花括号中语义动作的执行要在$\alpha$的推导结束之后，在$\beta$的推导开始之前。下面是有关继承属性的几个限制：
+		\begin{enumerate}
+			\item 产生式右部符号的继承属性必须在先于这个符号的动作中计算
+			\item 一个动作不能引用该动作右边符号的综合属性
+			\item 左值的综合属性要放在右部的末端
+			\item 多个继承属性，要考虑次序，避免形成环
+		\end{enumerate}
 \end{document}
