--- a/Network/Notes.tex
+++ b/Network/Notes.tex
@@ -311,8 +311,38 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 				\item 窗口大小：窗口长度必须小于等于序号空间的一半
 			\end{enumerate}
 	\section{面向连接的传输：TCP}
-		TCP即传输控制协议
+		TCP即传输控制协议，是因特网运输层的面向连接的可靠的运输协议。为了提供可靠数据传输，TCP依赖于前面提到的许多基本原理，包括差错检测、重传、累积确认、定时器以及用于序号和确认号的首部字段。\par
+		总的来讲，TCP是一种较为“繁琐”的传输协议，双方需要相互握手，并采取很多措施，用时间来换取传输的正确性。TCP传输有如下特点：
+		\begin{enumerate}
+			\item 点到点通信：一个发送者，一个接收者
+			\item 全双工：可以同时双向传输数据
+			\item 面向连接：通信前双方先握手（交换控制报文），建立数据传输所需的状态（缓存、变量等）
+			\item 可靠、有序的字节流：不保留报文（应用程序的输出）边界
+			\item 流水式发送报文段：发送窗口由拥塞控制和流量控制机制设置
+			\item 流量控制：发送方不会令接收方缓存溢出
+		\end{enumerate}
+		TCP可从缓存中取出并放入报文段中的数据量受限于最大报文段长度（MSS），它通常根据最初确定的由本地发送主机发送的最大链路层帧长度（即所谓的最大传输单元（MTU））来设置。注意MSS是指在报文段里\textbf{应用层数据}的最大长度，而不是包括首部的TCP报文段最大长度。建立连接时，每个主机可声明自己能够接受的MSS，缺省为536字节
 		\subsection{段结构}
+			TCP报文段由首部字段和一个数据字段组成。总的来看，TCP报文段为如下格式：\par
+			\begin{figure}[h!]
+				\centering
+				\begin{minipage}{20em}
+					\centering
+					\includegraphics[scale = 0.5]{images/TCP_Segment_Structure.pdf}
+				\end{minipage}
+				\begin{minipage}{20em}
+					\centering
+					\includegraphics[scale = 0.3]{images/TCP_Segment_2nd.pdf}
+				\end{minipage}
+			\end{figure}
+			对部分内容的解释如下：
+			\begin{enumerate}
+				\item 4bit的首部长度字段：由于TCP选项字段的原因，TCP首部的长度是可变的。
+				\item 可选与变长的选项字段：用于发送方和接收方协商最大报文段长度MSS时，或在高速网络环境下用作窗口调节因子时使用
+				\item 还定义了一个时间戳选项
+			\end{enumerate}
+			\paragraph{序号和确认号}
+			TCP把数据看成是一个无结构的、有序的字节流。一个\textit{报文段}的序号是该报文段首字节的字节流编号。所以说相邻的报文段，其编号是不相邻的，间隔为MSS。对于确认号，接收方发送的确认号是\textit{期望}从发送方接到的下一\textbf{字节}的序号。TCP采用的是提供累积确认
 		\subsection{可靠数据传输}
 		\subsection{流量控制}
 		\subsection{连接管理}
