--- a/Compiler/Notes.tex
+++ b/Compiler/Notes.tex
@@ -127,12 +127,28 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 \theoremstyle{plain} \newtheorem{lemma}{lemma}[section] %引理
 
 	\maketitle
+	\begin{figure}
+		\centering
+		\begin{minipage}{40em}
+			\centering
+			\includegraphics[scale = 0.3]{images/lecture_intro.pdf}
+			\caption{编译器总览}
+		\end{minipage}
+	\end{figure}
 	\newpage
 
 	\tableofcontents
 	\newpage
 
 	\chapter{词法分析}
+	词法分析器的任务是把构成源程序的字符流翻译成词法记号流。其目的是将输入字符串识别为有意义的子串
+	\begin{enumerate}
+		\item 子串的种类(Name)
+		\item 可帮助解释和理解该子串的属性(Attribute)
+		\item 可描述具有相同特征的子串的模式(Pattern)
+	\end{enumerate}
+	\section{词法记号及属性}
+
 	\chapter{语法分析}
 	\textit{输入：词法分析获得的记号序列；输出：程序的语法树}。需要一种可以描述合法记号序列的语言、一种可以区分合法和非法的记号序列的方法。正则表达式不能用于描述配对或嵌套的结构，这是因为有限自动机不能记录重复访问同一状态的次数。\par
 	\section{上下文无关文法}
