--- a/Algorithm/Notes.tex
+++ b/Algorithm/Notes.tex
@@ -300,4 +300,9 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 		显然，想要得到一组数据的$\min$和$\max$，最少需要$O(n)$的时间（因为所有数据总要遍历一遍），同时由于比较$n-1$次总能出结果，故最好的次数就是$n-1$。若想要同时找出最小值和最大值，那么就有一种好的算法，只需要最多$3\lceil n/2\rceil$次：对输入的一对元素相互进行比较，然后把较小的与当前最小值比较，较大的与当前最大值进行比较。
 	\section{期望为线性时间的选择算法}
 		如果想要找到这个集合中的$X_{(k)}$，那么采取一个类似于快排的分治策略：取一个分割点，如果这个点的排序小于k，那么就在高位集合递归，反之在低位集合
+
+
+
+
+	\chapter{动态规划}
 \end{document}
