--- a/Network/Notes.tex
+++ b/Network/Notes.tex
@@ -449,11 +449,44 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 	\section{TCP拥塞控制}
 
 	\chapter{网络层-数据平面}
+	网络层是协议栈中最复杂的层次之一，因此我们将仔细考察两种用于构造网络层分组交换的方法，即数据报模式和虚电路模式，并且理解编址在传递分组到目的主机的重要作用。转发涉及在单一的路由器中从一条入链路到一条出链路到传送。路由选择涉及到一个网络的所有路由器，他们经路由选择协议共同交互，以决定目标分组从源到目的地结点所采用的路径。\textit{“虚电路和数据报网络”部分在第六版的书上，其余部分由第六版和第七版整理而成}
+
 	\section{导论}
 		网络层的关键功能：转发（通过单个路口的过程）和路由（从源到目的的路由规划路径过程）
 		\subsection{数据平面}
 		\subsection{控制平面}
+	\section{虚电路和数据报网络}
+	与传输层提供的\textit{面向连接和无连接}服务相对应，网络层提供了\textit{连接和无连接}服务（注意这里不叫面向连接）。注意网络层和传输层服务之间的巨大差异：
+	\begin{enumerate}
+		\item 网络层向运输层提供主机到主机的服务，而运输层向应用层提供进程到进程的服务
+		\item 在至今为止的所有的主要的计算机网络体系结构中（因特网、ATM、帧中继等），网络层提供且仅提供连接和无连接两种服务中的一种，而不同时提供两种服务。仅在网络层提供连接服务的计算机网络称为虚电路网络，仅在网络层提供无连接服务的计算机网络成为数据报网络
+		\item 在运输层实现面向连接的服务和在网络层实现连接服务是完全不同的，运输层是在位于网络边缘的端系统中实现的，网络层也要在位于网络核心的路由器中实现。
+	\end{enumerate}
+		\subsection{虚电路网络}
+		一条虚电路的组成如下：\circled{1}源和目的主机之间的路径（即一系列链路和路由器）；\circled{2}VC号，沿着该路径的每段链路的一个号码；\circled{3}沿着该路径的每台路由器中的转发表表项。属于一条虚电路的分组将在它的首部携带一个VC号。因为一条虚电路在每条链路上可能具有不同的VC号，每台中间路由器必须用一个新的VC号替代每个传输分组的VC号。该新的VC号从转发表获得。\par
+		换句话说，当一个分组离开端主机或者路由器时，会携带着一个VC号，当它途径（已经设定好的路径上的）路由器时，它的VC号会发生相应的改变，而改变规则是由转发表决定的。这么大一个网络，会有更多的路径组合，再加上路由器会有多个出入口，那会产生很多很多的表项更换关系。转发表又是怎么确定应该如何更改VC号的呢？有如下原理：无论何时跨越一台路由器创建一条新的虚电路，转发表就增加了一个新表项。类似地，无论何时终止一条虚电路，沿着该路径每个表中的相应项将被删除。\par
+		那么，为什么还需要这个转换，而不是在每条链路上简单保持相同的VC号呢？第一，逐电路代替该号码减少了在分组首部中VC字段的长度。第二（but more importantly），可以大大简化虚电路的建立。{\color[HTML]{FF7F50}{特别是在具有多个VC号的路径，其上的每条链路要求……（第六版电子书P227中间）}}
+		\subsection{数据报网络}
+		在数据报网络中，一个端系统要发送分组，就为该分组加上目的端系统的地址，然后将分组推进网络中。在传播过程中，经过的每一台路由器都使用分组中的目标地址来转发该分组。特别是，每台路由器中有一个将\textbf{目的地址}映射到链路接口的转发表；当分组到达路由器时，路由器使用该分组的目的地址在转发表中查找适当的输出链路接口。\par
+		数据报网络维护的转发表是由目的地址范围（由一个前缀匹配表示，它其实\textbf{可以}是另一个前缀匹配的前缀，在匹配时按照特殊优先的原则不会冲突，即\textit{最长前缀匹配规则}）和对应的转发到的链路接口组成。\par
+		虽然在数据报网络中的路由器不维持连接状态信息，但他们无论如何(whatever)在其转发表中维持了转发状态信息。
 	\section{路由器组成}
+	路由器由四个组件构成：路由选择处理器（在控制平面，软件）、输入端口、输出端口、交换结构（都是在数据平面、硬件）。
+		\subsection{输入端口处理和基于目的地转发}
+		输入端口的线路端接功能与链路层处理实现了用于各个输入链路的物理层和链路层。在输入端口中执行的查找对于路由器的运行是至关重要的。转发表是由路由选择处理器计算和更新的，但转发表的一份影子副本通常会被放在每个输入端口。{\color[HTML]{FF7F50}{使用在每个输入端口的影子副本，转发决策能在每个输入端口本地做出，无需基于每个分组调用集中式路由选择处理器，因此避免了集中式处理的瓶颈。}}尽管“查找”在输入端口处理中可认为是最为重要的动作，但必须采取许多其他动作：
+		\begin{enumerate}[label = \circled{\arabic{*}}]
+			\item 必须出现物理层和链路层处理
+			\item 必须检查分组但版本号、检验和以及寿命字段，并且重写后两个字段
+			\item 必须更新用于网络管理但计数器（如接收到的IP数据报的数目）
+		\end{enumerate}
+		所以输入端口步骤如下：线路端接 $\to$数据链路处理（协议，拆封）$\to$查找，转发，排队$\to$交换结构\par
+		为了保证查找的效率，会用嵌入式片上DRAM和更快的SRAM（用作一种DRAM缓存）内存来设计。三态内容可寻址存储器也常被用于查找
+		\subsection{交换结构}
+		交换节点位于一台路由器的核心部位。有三种交换技术：
+			\paragraph{经内存交换}
+			最简单、最早的路由器是传统的计算机，在输入端口与输出端口之间的交换是在CPU（路由选择处理器）的直接控制下完成的。输入和输出端口的功能就像在传统操作系统中的I/O设备一样。许多现代路由器（尤其适合小容量路由器）用内存进行交换，但目的地址但查找和将分组存储（交换）进适当的内存 存储位置是由输入线路卡来处理的
+			\paragraph{经总线交换}
+			让输入端口为分组预先计划一个交换机内部标签（首部），指示本地输出端口。该分组能由所有输出端口收到，但只有与该便签匹配的端口才能保存该分组。然后标签在输出端口被去除，因为其仅用于交换机内部来跨越总线。因为每个分组必须跨越单一总线，故路由器的交换带宽受总线速率的限制。对于运行在小型局域网和企业网中的路由器来说，通过总线交换通常是足够的。
 	\section{IP}
 		\subsection{数据报格式}
 		\subsection{分片}
