--- a/2020Fall/Network/Notes.tex
+++ b/2020Fall/Network/Notes.tex
@@ -449,10 +449,11 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 	\section{TCP拥塞控制}
 
 	\chapter{网络层-数据平面}
-	网络层是协议栈中最复杂的层次之一，因此我们将仔细考察两种用于构造网络层分组交换的方法，即数据报模式和虚电路模式，并且理解编址在传递分组到目的主机的重要作用。转发涉及在单一的路由器中从一条入链路到一条出链路到传送。路由选择涉及到一个网络的所有路由器，他们经路由选择协议共同交互，以决定目标分组从源到目的地结点所采用的路径。\textit{“虚电路和数据报网络”部分在第六版的书上，其余部分由第六版和第七版整理而成}
+	网络层是协议栈中最复杂的层次之一，因此我们将仔细考察两种用于构造网络层分组交换的方法，即数据报模式和虚电路模式，并且理解编址在传递分组到目的主机的重要作用。转发涉及在单一的路由器中从一条入链路到一条出链路到传送。路由选择涉及到一个网络的所有路由器，他们经路由选择协议共同交互，以决定目标分组从源到目的地结点所采用的路径。\textit{“虚电路和数据报网络”部分在第六版的书上，其余部分由第六版和第七版整理而成}\par
+	因特网的网络层有三个主要组件： \circled{1}IP协议 \circled{2}路由选择部分（决定了数据报从源到目的地所经过的路径，会计算出用于在网络中转发分组的转发表） \circled{3}报告数据报中的差错和对某些网络层信息请求进行相应的设施
 
 	\section{导论}
-		网络层的关键功能：转发（通过单个路口的过程）和路由（从源到目的的路由规划路径过程）
+		网络层的关键功能：转发（通过单个路口的过程）和路由（从源到目的的路由规划路径过程）。
 		\subsection{数据平面}
 		\subsection{控制平面}
 	\section{虚电路和数据报网络}
@@ -487,8 +488,54 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 			最简单、最早的路由器是传统的计算机，在输入端口与输出端口之间的交换是在CPU（路由选择处理器）的直接控制下完成的。输入和输出端口的功能就像在传统操作系统中的I/O设备一样。许多现代路由器（尤其适合小容量路由器）用内存进行交换，但目的地址但查找和将分组存储（交换）进适当的内存 存储位置是由输入线路卡来处理的
 			\paragraph{经总线交换}
 			让输入端口为分组预先计划一个交换机内部标签（首部），指示本地输出端口。该分组能由所有输出端口收到，但只有与该便签匹配的端口才能保存该分组。然后标签在输出端口被去除，因为其仅用于交换机内部来跨越总线。因为每个分组必须跨越单一总线，故路由器的交换带宽受总线速率的限制。对于运行在小型局域网和企业网中的路由器来说，通过总线交换通常是足够的。
-	\section{IP}
+			\paragraph{经互联网络交换}
+			克服单一、共享式带宽限制的一种方法是，使用一个更复杂的互联网络。纵横式交换机就是一种由2N条总线组成的互联网络，它连接N个输入端口与N个输出端口（如下图），交叉结点可以选择打开和闭合。
+			\begin{figure}
+				\centering
+				\begin{minipage}{40em}
+					\centering
+					\includegraphics[scale = 0.5]{images/crossbar_in_router.png}
+				\end{minipage}
+			\end{figure}\par
+			与前面两种交换方式不同，纵横式网络能够并行转发多个分组。纵横式交换机是\textbf{非阻塞的}，即只要没有其他分组被转发到该输入端口，转发到输出端口的分组将不会被到达输出端口的分组阻塞。但如果来自两个不同输入端口的分组，则某个时间经给定总线仅能够发送一个分组
+		\subsection{输出端口}
+		交换结构$\to$排队（缓存管理）$\to$数据链路处理（协议、封装）$\to$线路端接
+		\subsection{何处出现排队}
+		显然在输入端口和输出端口都会形成排队，这些队列占用了路由器的缓存空间，当缓冲区满时将会产生丢包。在下面的讨论中，设输入链路速率和输出链路速率均为$R_{line}$，且有N个输入端口和N个输出端口。定义交换结构传送速率$R_{switch}$为从输入端口到输出端口能够移动分组的速率。速率的单位均为（分组/秒）
+			\paragraph{输入排队}
+			和交换结构传送速率与输入速率有关。考虑纵横式结构，并做如下假定：
+			\begin{enumerate}
+				\item 所有链路速度相同
+				\item 一个分组能够以一条输入链路接受一个分组所用的相同的时间量，从任意一个输出端口传送到给定的输出端口（也就是说，去除排队的时间，分组经过输入部分和经过交换结构的时间相同）
+				\item 分组在输入队列是FCFS的，在交换结构中只要输出端口不同就是并行的，否则除其中一个外会被阻塞
+			\end{enumerate}
+			会出现如下情况：假设输入端口A和B头部的两个分组1和2都要发往接受端口a，不妨假设交换结构决定发送分组1.那么这个时候，即使分组2后面的分组3是发往端口b（并无竞争），它也需要等待。这种现象称为输入排队交换机中的线路前部（HOL）阻塞。由于HOL阻塞，只要输入链路上的分组到达速率达到其容量的58\%，在某些假设前提下，输入队列的长度就将无限制增大。
+			\paragraph{输出排队}
+			输出端口的排队和输出端口发送分组的速率与交换结构的传送速率有关。假设$R_{switch}=N\times R_{line}$，这时候输入端口不会产生排队，但是输出端口很有可能排队。\par
+			当缓冲区满的时候，要么丢弃到达的分组（弃尾），要么删除一个或多个以排队的分组。在某些情况下，在缓存填满之前就丢弃一个分组（或在其首部加上标记）的做法是有利的，这可以向发送方提供一个拥塞信号。这些分组丢弃和标记策略统称为主动队列管理（AQM）
+			\paragraph{路由器缓存}
+			假定需要路由器缓存来吸收流量负载的波动。多年以来，用于缓存长度的经验方法是[RFC 3439]，缓存数量B等于平均往返时延RTT乘以链路的容量C。这个结果是对于少量TCP流的排队动态性分析得到的。当有大量的TCP流（如N条）流过一条链路时，缓存所需要的数量是$B=RTT\times C/\sqrt{N}$
+		\subsection{分组调度}
+		现在讨论确定次序的问题，即\textit{排队的分组如何经输出链路传输}的问题。这块参考OS的进程调度，三种策略分别是FIFO、priority和RR
+			\paragraph{先进先出}
+			如果没有足够的缓存空间来容纳到达的分组，队列的分组丢弃策略则确定该分组是否将被丢弃（丢失）或者从队列中去除其他分组以便为到达的分组腾出空间。
+			\paragraph{优先权排队}
+			在实践中，网络操作员可以配置一个队列，这样携带网络管理信息的分组（例如，由源或目的TCP/UDP端口号所标示）获得超过用户流量的优先权；此外，基于IP的实时话音分组可能获得超过非实时流量的优先权。\par
+			在非抢占式优先权排队规则下，一旦分组开始传输，就不能打断。
+			\paragraph{循环和加权公平排队}
+			在循环排队规则下，分组像使用优先权排队那样被分类。但是是采用Round-Robin的方式来发送各个类的分组。一个所谓的保持工作排队规则是在有（任何类的）分组等待传输时，不允许链路保持空闲。当寻找给定的类的分组但没有找到时，保持工作的循环规则将立即检查循环序列中的下一个类。\par
+			加权公平排队（WFQ）规则中，到达的分组被分类并在合适的等待区域排队，同样采用Round-Robin的方式来对各个类进行轮转。WFQ和循环排队的不同之处在于，每个类在任何时间间隔内可能收到不同数量的服务。具体而言，每个类被分配一个权$w_i$。使用WFQ方式，在类i有分组要发送的任何时间间隔中，第i类将确保接收到的服务部分等于$w_i/(\sum w_j)$部分。
+	\section{网际协议：IPv4、寻址、IPv6及其他}
+	在这节中，我们将关注点转向今天的因特网网络层的关键方面和著名的网际协议（IP）。今天有两个版本的IP正使用：IP版本4（IPv4）和IPv6
 		\subsection{数据报格式}
+		IPv4中的关键字段（部分）如下：
+		\begin{enumerate}
+			\item 服务类型（TOS）区分不同类型的数据报（如，以下特别要求低时延、高吞吐量或可靠性的数据报）
+			\item 标识、标志、片偏移与IP分片有关。IPv6不允许在路由器上对分组分片
+			\item 寿命（TTL）
+			\item 协议通常仅当到达最终目的地才有用。指示了其数据部分应当交给哪个特定的运输层协议。如：值为6是TCP，值为17是UDP。注意在IP数据报中对协议号所起的作用，类似于运输层报文段中端口号字段所起的作用
+			\item 首部检验和与该和的反码（被称为因特网检验和）存放在检验和字段中。注意在每台路由器上必须\textbf{重新计算}检验和并再次存放到原处，因为TTL字段及可能的选项字段会改变。\textit{为什么TCP/TP在运输层和网络层都执行差错检测？}首先，IP只对IP首部计算了检验和，而TCP/UDP检验是对整个TCP/UDP报文段进行的；其次，TCP/UDP和IP不一定属于同一个协议栈
+		\end{enumerate}
 		\subsection{分片}
 		\subsection{Ipv4地址}
 		\subsection{NAT：网络地址转换}
